Update registration page

--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -13,6 +13,8 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 We are pleased to invite you to the 12th Annual Conference in Boston, Massachusetts! We look forward to hundreds of our members from across the world coming together for this four-day conference experience, 
 taking place **November 10 - 13, 2022** at the Marriott at the Renaissance Center. Join us in a celebration of diversity across all fields.
 
+<br />
+
 ***
 
 ### Registration opens on 15 August 2022
@@ -22,10 +24,10 @@ We have 3 ticket types:
  - Professional
  - Expo-Only
 
+<br />
+Register by August 31, 2022 and recieve our early-bird discount of 10% off listed prices below.
 
-Early bird prices will be available until **August 31**.
-
-Regular ticket prices (shown below), will be in-effect starting September 1.
+**Not an oSTEM Member?** Become one today to receive an additional membership discount, register on our [Join oSTEM](https://ostem.org/page/how-to-join-ostem) page. 
 
 <TopicSquare title="Full Conference Tickets" borderColor="border-green-500">
 <table className="table-fixed text-center">
@@ -68,39 +70,77 @@ The Expo-only pass grants access only to the Graduate School and Career Fair Exp
 
 </TopicSquare>
 
-<div className="grid gap-8 sm:grid-cols-2 my-8 justify-center content-center">
-<CTAButton onClick="https://whova.com/portal/registration/annua3_202211/" ackgroundColor="skyblue">Attendee Registration</CTAButton>
+#### Attendee Registration
+This year we are partnering with Whova to bring you a smooth registration experience. Use the button below to register for student, professional, and expo-only ticket types.
+If you have any questions, please reach out to conference@ostem.org.
+
+<div className="text-center m-4"> 
+<CTAButton onClick="https://whova.com/portal/registration/annua3_202211/" backgroundColor="skyblue">Attendee Registration</CTAButton>
+</div>
+
+#### Sponsor / Exhibitor Registration
+If you are an exhibitor or a sponsor, you should have received a code that will allow you to register at the button below.
+If you are a sponsor or from a sponsoring organization and have questions, please reach out to sponsorship@ostem.org
+
+<div className="text-center m-4">
 <CTAButton onClick="https://whova.com/portal/registration/annua3_202211/g974p95a" backgroundColor="rasp">Sponsor/Exhibitor Registraion</CTAButton>
-<a style={{textDecoration: 'none', borderRadius: 3, padding: 10, width:200,
-            fontFamily: 'Helvetica', lineHeight:1.6, fontWeight:400, fontSize:16,
-            display:'block', textAlign:'center', backgroundColor: '#88B8D1', color:'#FFFFFF'}} 
-    target="_blank" 
-    rel="noreferrer" 
-    href="https://whova.com/portal/registration/annua3_202211/" 
-    data-reactroot=""
->
-    Click here for attendee registration
-</a>
-
-<a style={{textDecoration: 'none', borderRadius: 3, padding: 10, width:200,
-            fontFamily: 'Helvetica', lineHeight:1.6, fontWeight: 400, fontSize: 16,
-            display:'block', textAlign:'center', backgroundColor: '#9e3c3f', color:'#FFFFFF'}} 
-    target="_blank" 
-    rel="noreferrer" 
-    href="https://whova.com/portal/registration/annua3_202211/g974p95a" 
-    data-reactroot=""
->
-    Click here for sponsor/exhibitor registration
-</a>
-
 </div>
 
 ***
 
 ## Hotel
-TBA
+
+[Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) <br/>
+39 Dalton St. <br/>
+Boston, MA 02199
+
+**Room Rate:** $249/night (does not include 14.95% of state and local taxes and fees)
+- Check-in: 4:00 PM
+- Check-out: 12:00 PM
+- [Accessibility Information](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/#access:~:text=617%2D236%2D2000-,Accessible,-Hotel%20Features)
+- For futher information please call the hotel at +1 617-236-2000
+
+<div className="text-center m-4">
+<CTAButton onClick="https://book.passkey.com/go/oSTEM2022" backgroundColor="skyblue">Book your room</CTAButton>
+</div>
+
+The roomblock rate will end on **October 14th**. Book your room before the block fills up!
+
+For further accessibility questions or concerns, pleast contact access@ostem.org.
+
+***
 
 ## Transportation
-TBA
+
+#### Airport
+**Logan International Airport (BOS)**
+- 6.5 miles from hotel
+- [Airlines that support BOS](https://www.massport.com/logan-airport/flights/airlines/)
+
+<br />
+
+#### Ground Transportation
+- MBTA [Blue Line to Green Line](https://goo.gl/maps/vTQyTBpLvmbqHKJTA)
+    - Includes approx. 0.4 miles of walking/additional travel
+    - 39 minutes, $2.40 fare
+- Lyft, Uber, or Taxi
+    - Rates vary depending on availability and demand
+    - 15 - 30 minutes
+
+<br />
+
+#### Hotel Parking for Overnight and Local Guests
+- [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/)
+    - $65 for daily on-site and valet Parking
+    - Electric car charging stations available
+- [Hynes Auditorium Garage](https://www.pilgrimparking.com/boston-parking-garages/hynes-auditorium-garage)
+    - $40 for 10-24 hours
+    - Open 24 hours
+    - 0.1 miles from Hotel
+- [Prudential Center](https://www.prudentialcenter.com/visit/parking/)
+    - $44 for daily Parking
+    - 0.3 miles from hotel
+- [ParkBoston](https://park.boston.gov/)
+- [SpotHero](https://spothero.com/)
 
 </SiteLayout>
