Update main page for registration opening

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -26,9 +26,21 @@ import { SiteLayout } from "../components/layout/SiteLayout";
                 If you want a space where you can be your authentic LGBTQ+ self and your authentic STEM self, this is the conference for you.
             </p>
         </div>
+        <div className="rounded-r md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-ostem-blue border-solid pb-4">
+            <div className="bg-ostem-blue">
+                <h3 className="p-4">Registration - Now Open!</h3>
+            </div>
+            <p className="p-4">
+                Registration for our conference is now open! Register today on our <a href="/2022/registration">registration page</a>. <br />
+                A 10% early bird discount is available untl August 31. oSTEM members receive additional discounted pricing.
+            </p>
+            <div className="text-xl flex justify-center p-2">
+                <CTAButton onClick="/2022/registration" backgroundColor="ostem-blue">Register for the conference</CTAButton>
+            </div>
+        </div>
         <div className="rounded-r md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-deepwater-light border-solid pb-4">
             <div className="bg-tint-deepwater-light">
-                <h3 className="p-4">Request for Proposals - Now Open!</h3>
+                <h3 className="p-4">Request for Proposals</h3>
             </div>
             <p className="p-4">
                 oSTEM's Annual Conference has, as a foundation, our exceptional programming. 
@@ -45,7 +57,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     
 </div>
 
-<div className="text-2xl flex justify-center p-8">
+<div className="text-xl flex justify-center p-8">
   <CTAButton onClick="https://www.ostem.org/page/newsletter">Sign Up for Our Newsletter</CTAButton>
 </div>
 
