--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,6 +7,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 <SiteLayout>
 
 <div className="border-b-4 border-deepwater border-solid pb-4 text-center">
+    <img alt="Sail to Success Conference Banner"
+         src="/images/2022/2022_lightbluebanner.png"
+         className="flex max-w-[40rem] mx-auto"
+    />
     <p className="text-5xl font-display font-black text-navy">12th Annual oSTEM Conference 2022</p>
     <hr/>
     <p className="flex justify-center text-3xl font-display">
