--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -25,7 +25,7 @@ We have 3 ticket types:
  - Expo-Only
 
 <br />
-Register by August 31, 2022 and recieve our early-bird discount of 10% off listed prices below.
+Register by August 31, 2022 and receive our early-bird discount of 10% off listed prices below.
 
 **Not an oSTEM Member?** Become one today to receive an additional membership discount, register on our [Join oSTEM](https://ostem.org/page/how-to-join-ostem) page. 
 
@@ -83,7 +83,7 @@ If you are an exhibitor or a sponsor, you should have received a code that will 
 If you are a sponsor or from a sponsoring organization and have questions, please reach out to sponsorship@ostem.org
 
 <div className="text-center m-4">
-<CTAButton onClick="https://whova.com/portal/registration/annua3_202211/g974p95a" backgroundColor="rasp">Sponsor/Exhibitor Registraion</CTAButton>
+<CTAButton onClick="https://whova.com/portal/registration/annua3_202211/g974p95a" backgroundColor="rasp">Sponsor/Exhibitor Registration</CTAButton>
 </div>
 
 ***
@@ -98,15 +98,15 @@ Boston, MA 02199
 - Check-in: 4:00 PM
 - Check-out: 12:00 PM
 - [Accessibility Information](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/#access:~:text=617%2D236%2D2000-,Accessible,-Hotel%20Features)
-- For futher information please call the hotel at +1 617-236-2000
+- For further information please call the hotel at +1 617-236-2000
 
 <div className="text-center m-4">
 <CTAButton onClick="https://book.passkey.com/go/oSTEM2022" backgroundColor="skyblue">Book your room</CTAButton>
 </div>
 
-The roomblock rate will end on **October 14th**. Book your room before the block fills up!
+The room-block rate will end on **October 14th**. Book your room before the block fills up!
 
-For further accessibility questions or concerns, pleast contact access@ostem.org.
+For further accessibility questions or concerns, please contact access@ostem.org.
 
 ***
 
