--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -11,7 +11,7 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 </div>
 
 We are pleased to invite you to the 12th Annual Conference in Boston, Massachusetts! We look forward to hundreds of our members from across the world coming together for this four-day conference experience, 
-taking place **November 10 - 13, 2022** at the Marriott at the Renaissance Center. Join us in a celebration of diversity across all fields.
+taking place **November 10 - 13, 2022** at the Sheraton at the Prudential Center. Join us in a celebration of diversity across all fields.
 
 <br />
 
@@ -25,7 +25,7 @@ We have 3 ticket types:
  - Expo-Only
 
 <br />
-Register by August 31, 2022 and receive our early-bird discount of 10% off listed prices below.
+Register by August 31, 2022 and receive our early-bird discount of 10% off listed prices below. After August 31 ticket prices may be subjected to a 2% + $0.99 fee.
 
 **Not an oSTEM Member?** Become one today to receive an additional membership discount, register on our [Join oSTEM](https://ostem.org/page/how-to-join-ostem) page. 
 
@@ -94,7 +94,7 @@ If you are a sponsor or from a sponsoring organization and have questions, pleas
 39 Dalton St. <br/>
 Boston, MA 02199
 
-**Room Rate:** $249/night (does not include 14.95% of state and local taxes and fees)
+**Room Rate:** $249/night up to four (4) occupants (does not include 14.95% of state & local taxes and fees)
 - Check-in: 4:00 PM
 - Check-out: 12:00 PM
 - [Accessibility Information](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/#access:~:text=617%2D236%2D2000-,Accessible,-Hotel%20Features)
