--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -49,7 +49,7 @@ Register by August 31, 2022 and receive our early-bird discount of 10% off liste
 </table>
 
 The Student and Professional tickets are all-access passes to conference programming, events, and meals.
-oSTEM will provide Friday lunch and dinner and Saturday breakfast, lunch, and dinner. There is no general Sunday breakfast or lunch this year.
+oSTEM will provide Friday lunch and Saturday breakfast, lunch, & dinner. There is no general Sunday breakfast or lunch this year.
 </TopicSquare>
 
 <TopicSquare title="Expo-Only Tickets" borderColor="border-blue-500">
