Update FAQ for registration open

--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -32,7 +32,7 @@ We have decided to host our 2022 conference to in person. Our COVID-19 mitigatio
 
 ### How do I register for the conference?
 
-Registration for the conference will open later this summer.
+Registration for the conference is open now!
 
 ### How much does registration cost?
   
