--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -26,19 +26,19 @@ November 10-13, 2022
   
 ### How is COVID-19 affecting the conference?
 
-We have decided to host our 2022 conference to in person. Our COVID-19 mitigation strategy is still under development; more details will be forthcoming.
+We have decided to host our 2022 conference in person. Our COVID-19 mitigation strategy is still under development; more details will be forthcoming.
 
 ## Registration
 
 ### How do I register for the conference?
 
-Registration for the conference will open later this summer.
+Registration for the conference is now open! Visit our [Conference Registration Page](https://conference.ostem.org/2022/registration) for more information
 
 ### How much does registration cost?
   
  - Students
-   - $150 members,
-   - $225 non-members,
+   - $150 members
+   - $225 non-members
  - Expo Only
    - $75 one day ticket
    - $100 2-day ticket
@@ -49,7 +49,7 @@ Registration for the conference will open later this summer.
 ### What does conference registration cover?
 
 - The Student and Professional tickets are both all-access passes to conference programming, events, and meals.
-  - oSTEM will provide Friday lunch and dinner and Saturday breakfast, lunch, and dinner. There is no general Sunday breakfast or lunch this year.
+  - oSTEM will provide Friday lunch and dinner and Saturday breakfast, lunch, and dinner. General Sunday breakfast will also be available.
 - The Expo-only pass grants access only to the Graduate School and Career Fair Expo on Friday, November 11 and Saturday, November 12.
 
 ### Will there be on-site registration?
