--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -32,7 +32,7 @@ We have decided to host our 2022 conference in person. Our COVID-19 mitigation s
 
 ### How do I register for the conference?
 
-Registration for the conference is now open! Visit our [Conference Registration Page](https://conference.ostem.org/2022/registration) for more information
+Registration for the conference is now open! Visit our [Conference Registration Page](https://conference.ostem.org/2022/registration) for more information.
 
 ### How much does registration cost?
   
