--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -49,7 +49,7 @@ Register by August 31, 2022 and receive our early-bird discount of 10% off liste
 </table>
 
 The Student and Professional tickets are all-access passes to conference programming, events, and meals.
-oSTEM will provide Friday lunch and Saturday breakfast, lunch, & dinner. There is no general Sunday breakfast or lunch this year.
+oSTEM will provide Friday lunch and Saturday breakfast, lunch, & dinner. General Sunday breakfast will also be available.
 </TopicSquare>
 
 <TopicSquare title="Expo-Only Tickets" borderColor="border-blue-500">
@@ -71,7 +71,7 @@ The Expo-only pass grants access only to the Graduate School and Career Fair Exp
 </TopicSquare>
 
 #### Attendee Registration
-This year we are partnering with Whova to bring you a smooth registration experience. Use the button below to register for student, professional, and expo-only ticket types.
+This year we are partnering with [Whova](https://whova.com/) to bring you a smooth registration experience. Use the button below to register for student, professional, and expo-only ticket types.
 If you have any questions, please reach out to conference@ostem.org.
 
 <div className="text-center m-4"> 
