--- a/src/pages/2022/cfp.mdx
+++ b/src/pages/2022/cfp.mdx
@@ -39,9 +39,9 @@ From the posters submitted, a number will be selected to give 10-minute oral pre
 
 
 ## Poster Display and Awards
-Posters will be on display to all conference attendees during the day on Saturday. Poster submitters will be asked to stand with their poster and explain their research to interested attendees and judges during the Career and Graduate Fair Expo.
+Posters will be on display to all conference attendees during the day on Saturday. Poster submitters will be asked to remain with their poster and explain their research to interested attendees and judges during the Career and Graduate Fair Expo.
 
-Awards will be given out for the highest scoring undergrad, graduate, and postdoc posters at the Saturday evening awards ceremony!
+Awards will be given out for the highest scoring undergraduate, graduate, and postdoc posters at the Saturday evening awards ceremony!
 
 
 ## F.A.Q
@@ -56,7 +56,7 @@ We will accept posters until October 15.
 
 <text style={{fontWeight: 'bold'}}>⊛ I submitted my poster but never received a confirmation email. Did you receive my poster submission?</text>
 
-The jot form is currently set up to send confirmation emails. In the case that you do not receive one, please reach out to conference-programming@ostem.org. 
+The Jotform is currently set up to send confirmation emails. In the case that you do not receive one, please reach out to conference-programming@ostem.org. 
 
 <text style={{fontWeight: 'bold'}}>⊛ How will the posters be displayed?</text>
 
@@ -66,7 +66,7 @@ We display the posters on an 8' x 4' free-standing cork board with push pins.
 
 Yes! Please let the programming committee know that you plan on attending the career fair and promptly arrive at the start of the session.  There will be about 20 minutes to attend after the session is over if you need additional time.
 
-<text style={{fontWeight: 'bold'}}>⊛ Do I need to bring my poster/can you print it for me?</text>
+<text style={{fontWeight: 'bold'}}>⊛ Do I need to bring my poster? Can you print it for me?</text>
 
 Unfortunately, oSTEM cannot print your poster. We advise that you travel with your poster.
 
@@ -76,7 +76,7 @@ Nope! Feel free to just participate in the poster session.
 
 <text style={{fontWeight: 'bold'}}>⊛ How will I know if my poster was accepted for the poster session?</text>
 
-Due to the interdisciplinary nature of oSTEM as an organization as well as the programming committee all submitted posters are accepted for the poster session. You should receive an email during October confirming your poster submission.
+Due to the interdisciplinary nature of oSTEM as an organization as well as the programming committee, all submitted posters are accepted for the poster session. You should receive an email during October confirming your poster submission.
 
 <text style={{fontWeight: 'bold'}}>⊛ How will I know if my poster was accepted for the research symposium?</text>
 
@@ -87,7 +87,7 @@ The programming committee will contact those individuals who were accepted.
 Of course!
 <text style={{fontWeight: 'bold'}}>⊛ When can I set my poster up?</text>
 
-Poster setup will be on Saturday morning and be available throughout the day on Saturday; feel free to take a free moment to wander through the posters during the day.
+Poster setup will be on Saturday morning and be available throughout the day on Saturday. Feel free to take a free moment to wander through the posters during the day.
 
 
 ## Additional Information
