--- a/src/pages/2022/cfp.mdx
+++ b/src/pages/2022/cfp.mdx
@@ -45,49 +45,54 @@ Awards will be given out for the highest scoring undergraduate, graduate, and po
 
 
 ## F.A.Q
-<text style={{fontWeight: 'bold'}}>⊛ What are the recommended poster sizes?</text>
+- **What are the recommended poster sizes?**
 
-The maximum poster dimensions are 48" x 36".
+    The maximum poster dimensions are 48" x 36".
 <img src="/images/poster-dimensions.jpg" alt=""/>
 
-<text style={{fontWeight: 'bold'}}>⊛ How long will poster submissions be open for the conference?</text>
+- **How long will poster submissions be open for the conference?**
+    We will accept posters until October 15.
 
-We will accept posters until October 15.
+- **I submitted my poster but never received a confirmation email. Did you receive my poster submission?**
 
-<text style={{fontWeight: 'bold'}}>⊛ I submitted my poster but never received a confirmation email. Did you receive my poster submission?</text>
+    The Jotform is currently set up to send confirmation emails. In the case that you do not receive one, please reach out
+    to conference-programming@ostem.org. 
 
-The Jotform is currently set up to send confirmation emails. In the case that you do not receive one, please reach out to conference-programming@ostem.org. 
+- **How will the posters be displayed?**
 
-<text style={{fontWeight: 'bold'}}>⊛ How will the posters be displayed?</text>
+    We display the posters on an 8' x 4' free-standing cork board with push pins.
 
-We display the posters on an 8' x 4' free-standing cork board with push pins.
+- **I noticed the poster session is during the Career Fair and Graduate School Expo. Can I still attend the expo and present a poster?**
 
-<text style={{fontWeight: 'bold'}}>⊛ I notice the poster session is during the Career Fair and Graduate School Expo. Can I still attend the expo and present a poster?</text>
+    Yes! Please let the programming committee know that you plan on attending the career fair and promptly arrive at the 
+    start of the session.  There will be about 20 minutes to attend after the session is over if you need additional time.
 
-Yes! Please let the programming committee know that you plan on attending the career fair and promptly arrive at the start of the session.  There will be about 20 minutes to attend after the session is over if you need additional time.
+- **Do I need to bring my poster? Can you print it for me?**
 
-<text style={{fontWeight: 'bold'}}>⊛ Do I need to bring my poster? Can you print it for me?</text>
+    Unfortunately, oSTEM cannot print your poster. We advise that you travel with your poster.
 
-Unfortunately, oSTEM cannot print your poster. We advise that you travel with your poster.
+- **Do I have to participate in the research symposium to present a poster?**
 
-<text style={{fontWeight: 'bold'}}>⊛ Do I have to participate in the research symposium to present a poster?</text>
+    Nope! Feel free to just participate in the poster session.
 
-Nope! Feel free to just participate in the poster session.
+- **How will I know if my poster was accepted for the poster session?**
 
-<text style={{fontWeight: 'bold'}}>⊛ How will I know if my poster was accepted for the poster session?</text>
+    Due to the interdisciplinary nature of oSTEM as an organization as well as the programming committee, all submitted
+    posters are accepted for the poster session. You should receive an email during October confirming your poster 
+    submission.
 
-Due to the interdisciplinary nature of oSTEM as an organization as well as the programming committee, all submitted posters are accepted for the poster session. You should receive an email during October confirming your poster submission.
+- **How will I know if my poster was accepted for the research symposium?**
 
-<text style={{fontWeight: 'bold'}}>⊛ How will I know if my poster was accepted for the research symposium?</text>
+    The programming committee will contact those individuals who were accepted.
 
-The programming committee will contact those individuals who were accepted.
+- **Can I still present my poster if I wasn't accepted for the research symposium?**
 
-<text style={{fontWeight: 'bold'}}>⊛ Can I still present my poster if I wasn't accepted for the research symposium?</text>
+    Of course!
+    
+- **When can I set my poster up?**
 
-Of course!
-<text style={{fontWeight: 'bold'}}>⊛ When can I set my poster up?</text>
-
-Poster setup will be on Saturday morning and be available throughout the day on Saturday. Feel free to take a free moment to wander through the posters during the day.
+    Poster setup will be on Saturday morning and be available throughout the day on Saturday. Feel free to take a free
+    moment to wander through the posters during the day.
 
 
 ## Additional Information
