--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -10,37 +10,36 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
   
 ### When is the 2022 Annual Conference?
   
-November 10-13, 2022
+November 11-13, 2022, but we recommend arriving Thursday, November 10th if feasible.
   
 ### Where is the 2022 conference?
   
 [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) <br/>
 39 Dalton St, Boston, MA 02199
   
-### I have a question which is not answered here.
-  
- - If you are a sponsor, please email: conference-sponsorship@ostem.org
- - Logistics (travel, non-sponsor registration): conference-logistics@ostem.org
- - Programming (speakers, posters, other programs): conference-programming@ostem.org
- - Accessibility: access@ostem.org
-  
-### How is COVID-19 affecting the conference?
+### How is COVID-19 and the monkeypox outbreak affecting the conference?
 
-We have decided to host our 2022 conference in person. Our COVID-19 mitigation strategy is still under development; more details will be forthcoming.
+We have decided to host our 2022 conference in person. Our COVID-19 and monkeypox outbreak mitigation strategy is still under development; more details will be forthcoming.
+  
+### Will there be a Hackathon this year?
+  
+oSTEM will not be hosting a hackathon at this year’s conference. Instead, we will be collaborating with the [NASA Space Apps Challenge](https://www.spaceappschallenge.org/) happening October 1-2, 2022. To learn more about this opportunity, please visit [Participant FAQ - NASA International Space Apps Challenge](https://www.spaceappschallenge.org/resources/faq/). If you do not see a local event for your city, you can join the [Universal Event](https://2020.spaceappschallenge.org/locations/universal-event/).
 
 ## Registration
 
 ### How do I register for the conference?
 
 Registration for the conference is now open! Visit our [Conference Registration Page](https://conference.ostem.org/2022/registration) for more information.
+  
+oSTEM Members receive an automatic discount. Not an [oSTEM member](https://ostem.org/page/how-to-join-ostem)? Click here to [join now](https://ostem.org/page/how-to-join-ostem). All tickets purchased on or after September 1 will cost the following:
 
 ### How much does registration cost?
   
  - Students
-   - $150 members
-   - $225 non-members
+   - $150 member
+   - $225 non-member
  - Expo Only
-   - $75 one day ticket
+   - $75 1-day ticket
    - $100 2-day ticket
  - Professional
    - $425 member
@@ -54,8 +53,15 @@ Registration for the conference is now open! Visit our [Conference Registration 
 
 ### Will there be on-site registration?
   
-No.
+Unfortunately, our team will not be able to accommodate on-site registration the day of. Please complete your registration by Friday, October 14, 2022.
 
+ ### I have a question which is not answered here.
+  
+ - If you are a sponsor, please email: conference-sponsorship@ostem.org
+ - Logistics (travel, non-sponsor registration): conference-logistics@ostem.org
+ - Programming (speakers, posters, other programs): conference-programming@ostem.org
+ - Accessibility: access@ostem.org
+  
 <style jsx>{`
   .faqs :global(h3) {
     font-size: 1.5rem;
