--- a/src/pages/2022/rfp.mdx
+++ b/src/pages/2022/rfp.mdx
@@ -9,31 +9,14 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 </div>
 
 
-Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now
+Out in Science, Technology, Engineering, and Mathematics (oSTEM) is no longer
 accepting program proposals for the in-person 12th Annual oSTEM Conference 2022.
-
-Successful programs will touch on oSTEM’s mission statement and also incorporate
-our core values: integrity, intentionality, respect, passion, and grit.
-
-<div className="bg-tint-spruce-light text-2xl mt-4 p-8 rounded">
-    <p className="flex items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" className="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-        </svg>
-        Our Request for Proposals is open! Submit your program today!
-    </p>
-    <CTAButton onClick={"https://form.jotform.com/221515042430137"}>
-      Submit a Proposal
-    </CTAButton>
-</div>                
-
-
 
 ## Submission Milestones
 
 - Monday, May 30: Request for programming released
 - Wednesday, August 10: Deadline for Submissions
-- Friday, August 26: Acceptance Notifications
+- Tuesday, September 6: Acceptance Notifications
 
 ## Program Topics
 
