--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -1,4 +1,5 @@
 import { SiteLayout } from "../../components/layout/SiteLayout";
+import { CTAButton } from "../../components/button/CTAButton";
 
 <SiteLayout title="Schedule">
 
@@ -43,15 +44,15 @@ oSTEM Members receive an automatic discount. Not an [oSTEM member](https://ostem
   
 Unfortunately, our team will not be able to accommodate on-site registration the day of. Please complete your registration by Friday, October 14, 2022.
 
- ### I have a question which is not answered here.
+### I have a question which is not answered here.
   
  - If you are a sponsor, please email: conference-sponsorship@ostem.org
  - Logistics (travel, non-sponsor registration): conference-logistics@ostem.org
  - Programming (speakers, posters, other programs): conference-programming@ostem.org
  - Accessibility: access@ostem.org
   
- ## Conference Logistics
- ### Can I stay at the hotel the conference is being hosted at? Is there a group rate?
+## Conference Logistics
+### Can I stay at the hotel the conference is being hosted at? Is there a group rate?
 Yes, you can stay at the [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) <br/>
 39 Dalton St. <br/>
 Boston, MA 02199
@@ -71,11 +72,11 @@ The room-block rate will end on **October 14th**. Book your room before the bloc
 For further accessibility questions or concerns, please contact access@ostem.org.
   
 ### What are the best transportation and parking options?
-  #### Airport - Logan International Airport (BOS)
+#### Airport - Logan International Airport (BOS)
 - 6.5 miles from hotel
 - [Airlines that support BOS](https://www.massport.com/logan-airport/flights/airlines/)
 
- #### Ground Transportation
+#### Ground Transportation
 - MBTA [Blue Line to Green Line](https://goo.gl/maps/vTQyTBpLvmbqHKJTA)
     - Includes approx. 0.4 miles of walking/additional travel
     - 39 minutes, $2.40 fare
@@ -85,7 +86,7 @@ For further accessibility questions or concerns, please contact access@ostem.org
 - [Bay Back Logan Express Bus](https://www.massport.com/logan-airport/to-from-logan/transportation-options/logan-express/back-bay/)
      - $3 to airport with a free ride back (active in the fall)
 
- #### Hotel Parking for Overnight and Local Guests
+#### Hotel Parking for Overnight and Local Guests
 - [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/)
     - $65 for daily on-site and valet Parking
     - Electric car charging stations available
