--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -16,36 +16,37 @@ All times listed are in Eastern Time (PT). Please note that this is a high-level
 </div>
 
 ## Thursday, November 10
-
-- 9:00 AM - 6:00 PM     Community Breakouts
-- 10:00 AM - 12:00 PM   Sponsored Workshop Blocks
-- 12:00 PM - 4:00 PM	  Career & Graduate School Expo - Day 1
-- 12:00 PM - 3:00 PM	  Poster Session
-- 4:00 PM - 6:00 PM     Academia Networking Session
+- 12:00 PM - 6:00 PM     Check-in Desk Open
     
 ## Friday, November 11
-
-- 8:30 AM - 9:45 AM  Workshop Block 1
-- 10:00 AM - 11:45 AM	Plenary Session
-- 12:15 PM - 1:30 PM	Workshop Block 2
-- 2:00 PM - 3:15 PM	Workshop Block 3
-- 2:00 PM - 3:00 PM	oSTEM Scholarship Awardees Reception
-- 2:30 PM - 3:30 PM	Help! I Joined oSTEM but what do I do now?
-- 2:30 PM - 4:30 PM	Career & Graduate School Expo - Day 2
+- 9:00 AM - 10:00 AM   New to the Conference Session
+- 9:00 AM - 1:00 PM    Site Visits (Limited spots available.)
+- 10:00 AM - 12:00 PM  Career and Graduate School Bootcamp / Gender Affirming Clothing Swap / Meet & Greet Session
+- 12:00 PM - 1:00 PM   Conference Kickoff Lunch with Keynote 
+- 1:00 PM - 4:15 PM	   Career and Graduate School Expo
+- 4:30 PM - 5:30 PM	   Workshop Block 1
+- 5:30 PM - 6:30 PM	   Workshop Block 2
+- 4:30 PM - 6:30 PM	   Racial Justice Program
+- 6:30 PM - 7:15 PM	   Membership Regional Mixer
+- 7:30 PM              Night on the Town (On Your Own)
 
 ## Saturday, November 12
-
-- 8:30 AM - 9:45 AM	Workshop Block 4
-- 10:00 AM - 11:45 AM	Plenary Session
-- 12:15 PM - 1:30 PM	Workshop Block 5
-- 2:00 PM - 3:15 PM	Workshop Block 6
-- 4:00 PM - 5:00 PM	Social Mixers
+- 8:00 AM - 10:00 AM	Breakfast
+- 9:00 AM - 10:00 AM	Chapter Awards & Announcements
+- 10:15 AM - 12:15 PM	Career and Graduate School Expo
+- 12:30 PM - 2:00 PM	Lunch & Learn Sessions
+- 2:10 PM - 3:10 PM	    Workshop Block 3
+- 3:10 PM - 3:20 PM	    Break
+- 3:30 PM - 4:30 PM	    Workshop Block 4
+- 4:40 PM - 5:40 PM	    Workshop Block 5
+- 5:40 PM - 6:00 PM	    Get Ready for Dinner
+- 6:00 PM - 6:30 PM	    Reception
+- 6:30 PM - 9:00 PM	    Dinner Program
+- 9:00 PM - 11:00 PM	Social Mixers
 
 ## Sunday, November 13
 
 - 9:00 AM - 12:00 PM	Gender Affirmation Symposium
-- 10:00 AM - 11:30 AM	Chapter Leader Summit
-- 12:00 PM - 1:30 PM	oSTEM Annual Report Preview Presentation
 -->
 
 If you have any questions please reach out at [conference@ostem.org](mailto:conference@ostem.org?subject=High-Level%20Schedule%20Question%20)
