--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -21,9 +21,9 @@ All times listed are in Eastern Time (PT). Please note that this is a high-level
 ## Friday, November 11
 - 9:00 AM - 10:00 AM   New to the Conference Session
 - 9:00 AM - 1:00 PM    Site Visits (Limited spots available.)
-- 10:00 AM - 12:00 PM  Career and Graduate School Bootcamp / Gender Affirming Clothing Swap / Meet & Greet Session
+- 10:00 AM - 12:00 PM  Career and Graduate School Bootcamp | Gender Affirming Clothing Swap | Meet & Greet Session
 - 12:00 PM - 1:00 PM   Conference Kickoff Lunch with Keynote 
-- 1:00 PM - 4:15 PM	   Career and Graduate School Expo
+- 1:00 PM - 4:15 PM	   [Career and Graduate School Expo](https://docs.google.com/document/d/1VTDHJsQ7WGci9WwfWzII3hnkitn2utuVXdQnAiJEPzo/edit?usp=sharing)
 - 4:30 PM - 5:30 PM	   Workshop Block 1
 - 5:30 PM - 6:30 PM	   Workshop Block 2
 - 4:30 PM - 6:30 PM	   Racial Justice Program
@@ -33,7 +33,7 @@ All times listed are in Eastern Time (PT). Please note that this is a high-level
 ## Saturday, November 12
 - 8:00 AM - 10:00 AM	Breakfast
 - 9:00 AM - 10:00 AM	Chapter Awards & Announcements
-- 10:15 AM - 12:15 PM	Career and Graduate School Expo
+- 10:15 AM - 12:15 PM	[Career and Graduate School Expo](https://docs.google.com/document/d/1VTDHJsQ7WGci9WwfWzII3hnkitn2utuVXdQnAiJEPzo/edit?usp=sharing)
 - 12:30 PM - 2:00 PM	Lunch & Learn Sessions
 - 2:10 PM - 3:10 PM	    Workshop Block 3
 - 3:10 PM - 3:20 PM	    Break
@@ -41,7 +41,7 @@ All times listed are in Eastern Time (PT). Please note that this is a high-level
 - 4:40 PM - 5:40 PM	    Workshop Block 5
 - 5:40 PM - 6:00 PM	    Get Ready for Dinner
 - 6:00 PM - 6:30 PM	    Reception
-- 6:30 PM - 9:00 PM	    Dinner Program
+- 6:30 PM - 9:00 PM	    oSTEM Gala with Dinner
 - 9:00 PM - 11:00 PM	Social Mixers
 
 ## Sunday, November 13
