--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -1,5 +1,4 @@
-import { SiteLayout } from "../../components/layout/SiteLayout";
-import { CTAButton } from "../../components/button/CTAButton";
+
 
 <SiteLayout title="Schedule">
 
@@ -9,11 +8,7 @@ import { CTAButton } from "../../components/button/CTAButton";
     </p>
 </div>
 
-All times listed are in Eastern Time (PT). Please note that this is a high-level schedule and a more detailed schedule will be made available closer to the conference.
-<!---  
-<div className="text-2xl flex justify-center p-8">
-  <CTAButton onClick="https://events.bizzabo.com/343425/agenda">View the full agenda here!</CTAButton>
-</div>
+All times listed are in Eastern Time (ET).
 
 ## Thursday, November 10
 - 12:00 PM - 6:00 PM     Check-in Desk Open
@@ -47,7 +42,6 @@ All times listed are in Eastern Time (PT). Please note that this is a high-level
 ## Sunday, November 13
 
 - 9:00 AM - 12:00 PM	Gender Affirmation Symposium
--->
 
 If you have any questions please reach out at [conference@ostem.org](mailto:conference@ostem.org?subject=High-Level%20Schedule%20Question%20)
 
