--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -8,7 +8,7 @@
     </p>
 </div>
 
-All times listed are in Eastern Time (ET).
+All times listed are in Eastern Time (ET). Please note that this is a high-level schedule and a more detailed schedule will be made available closer to the conference.
 
 ## Thursday, November 10
 - 12:00 PM - 6:00 PM     Check-in Desk Open
