--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -17,6 +17,10 @@ November 11-13, 2022, but we recommend arriving Thursday, November 10th if feasi
   
 [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) <br/>
 39 Dalton St, Boston, MA 02199
+
+### Where can I find the high-level schedule?
+  
+[Click here for the 2022 high-level schedule](https://conference.ostem.org/2022/schedule)
   
 ### How is COVID-19 and the monkeypox outbreak affecting the conference?
 
