--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -4,7 +4,7 @@
 
 <div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
     <p className="text-5xl font-display font-black">
-        High Level Conference Schedule
+        2022 High Level Conference Schedule
     </p>
 </div>
 
