--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -25,7 +25,7 @@ We have 3 ticket types:
  - Expo-Only
 
 <br />
-Register by August 31, 2022 and receive our early-bird discount of 10% off listed prices below. After August 31 ticket prices may be subjected to a 2% + $0.99 fee.
+Ticket prices are subjected to a 2% + $0.99 fee. Registration deadline is October 14, 2022.
 
 **Not an oSTEM Member?** Become one today to receive an additional membership discount, register on our [Join oSTEM](https://ostem.org/page/how-to-join-ostem) page. 
 
