--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -11,13 +11,13 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 </div>
 
 We are pleased to invite you to the 12th Annual Conference in Boston, Massachusetts! We look forward to hundreds of our members from across the world coming together for this four-day conference experience, 
-taking place **November 10 - 13, 2022** at the Sheraton at the Prudential Center. Join us in a celebration of diversity across all fields.
+taking place **November 11 - 13, 2022** at the Sheraton at the Prudential Center. Check-in starts November 10. Join us in a celebration of diversity across all fields.
 
 <br />
 
 ***
 
-### Registration opens on 15 August 2022
+### Registration is now open!
 
 We have 3 ticket types:
  - Student
