--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -48,12 +48,6 @@ oSTEM Members receive an automatic discount. Not an [oSTEM member](https://ostem
   
 Unfortunately, our team will not be able to accommodate on-site registration the day of. Please complete your registration by Friday, October 14, 2022.
 
-### I have a question which is not answered here.
-  
- - If you are a sponsor, please email: conference-sponsorship@ostem.org
- - Logistics (travel, non-sponsor registration): conference-logistics@ostem.org
- - Programming (speakers, posters, other programs): conference-programming@ostem.org
- - Accessibility: access@ostem.org
   
 ## Conference Logistics
 ### Can I stay at the hotel the conference is being hosted at? Is there a group rate?
@@ -112,6 +106,13 @@ For further accessibility questions or concerns, please contact access@ostem.org
 ### What is the [dress code](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134)?
   Attendees are asked to dress in business casual attire which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
   
+ ## Miscellaneous
+  ### I have a question which is not answered here.
+  
+ - If you are a sponsor, please email: conference-sponsorship@ostem.org
+ - Logistics (travel, non-sponsor registration): conference-logistics@ostem.org
+ - Programming (speakers, posters, other programs): conference-programming@ostem.org
+ - Accessibility: access@ostem.org
 <style jsx>{`
   .faqs :global(h3) {
     font-size: 1.5rem;
