--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -7,7 +7,7 @@ import { CTAButton } from "../../components/button/CTAButton";
 
 <div className={"faqs"}>
 
-## General Conference
+## **General Conference**
   
 ### When is the 2022 Annual Conference?
   
@@ -30,7 +30,7 @@ We have decided to host our 2022 conference in person. Our COVID-19 and monkeypo
   
 oSTEM will not be hosting a hackathon at this year’s conference. Instead, we will be collaborating with the [NASA Space Apps Challenge](https://www.spaceappschallenge.org/) happening October 1-2, 2022. To learn more about this opportunity, please visit [Participant FAQ - NASA International Space Apps Challenge](https://www.spaceappschallenge.org/resources/faq/). If you do not see a local event for your city, you can join the [Universal Event](https://2020.spaceappschallenge.org/locations/universal-event/).
 
-## Registration
+## **Registration**
 
 ### How do I register for the conference?
 
@@ -49,7 +49,7 @@ oSTEM Members receive an automatic discount. Not an [oSTEM member](https://ostem
 Unfortunately, our team will not be able to accommodate on-site registration the day of. Please complete your registration by Friday, October 14, 2022.
 
   
-## Conference Logistics
+## **Conference Logistics**
 ### Can I stay at the hotel the conference is being hosted at? Is there a group rate?
 Yes, you can stay at the [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) <br/>
 39 Dalton St. <br/>
@@ -106,7 +106,7 @@ For further accessibility questions or concerns, please contact access@ostem.org
 ### What is the [dress code](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134)?
   Attendees are asked to dress in business casual attire which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
   
- ## Miscellaneous
+ ## **Miscellaneous**
   ### I have a question which is not answered here.
   
  - If you are a sponsor, please email: conference-sponsorship@ostem.org
