--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -49,7 +49,7 @@ oSTEM Members receive an automatic discount. Not an [oSTEM member](https://ostem
 Unfortunately, our team will not be able to accommodate on-site registration the day of. Please complete your registration by Friday, October 14, 2022.
 
   
-## **Conference Logistics**
+## **Travel and Lodging**
 ### Can I stay at the hotel the conference is being hosted at? Is there a group rate?
 Yes, you can stay at the [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) <br/>
 39 Dalton St. <br/>
@@ -98,20 +98,28 @@ For further accessibility questions or concerns, please contact access@ostem.org
 - [ParkBoston](https://park.boston.gov/)
 - [SpotHero](https://spothero.com/)
 
-### Is there financial assistance for students to attend?
-  Yes, if you are an official chapter looking for funding, [please click here](https://form.jotform.com/222355454457055). Please note that we **do not have the funds to fully support** all members of your chapter. We recommend seeking additional assistance on campus and in your community.
-
-  If you are a chapter looking for additional resources on your campus and in your community, [click here.](https://ostem.notion.site/Chapter-Finances-oSTEM-Annual-Conference-bb9f01b02b474b3995c7b8ce06b8e843)
+ ## **Logistics**
+  ### What am I agreeing to by registering for the conference?
+  All attendees are agreeing to [oSTEM’s Code of Conduct](https://ostem.org/Page/code-of-conduct) by registering for the conference. Please review and be familiar with the code of conduct prior to attending.
+  
+  ### How do I make sure employers have access to my resume?
+  Set up an account in the [oSTEM Career Center](https://careers.ostem.org/login/?goto=%2Faccount%2F&msg=1) and upload your resume. Doing so prior to the conference will increase your chances of receiving an interview during the conference.
+  
+  ### Is there financial assistance for students to attend?
+  Yes, if you are an official chapter looking for funding, [please click here](https://form.jotform.com/222355454457055). Please note that we **do not have the funds to fully support** all members of your chapter. We recommend seeking [additional assistance on campus and in your community](https://ostem.notion.site/Chapter-Finances-oSTEM-Annual-Conference-bb9f01b02b474b3995c7b8ce06b8e843).
   
 ### What is the [dress code](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134)?
   Attendees are asked to dress in business casual attire which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
   
- ## **Miscellaneous**
+  ### Do I need to be "out" to attend? Will photos be taken?
+  No. Everyone is welcome to attend the conference. We strive to create a safe and inclusive space regardless on if you are out or selectively out. While photos will be taken at the conference, anyone uncomfortable with their photo being shared has the option to pick a lanyard that indicates to photographers and other guests that you do not wish to have your photo shared.
+  
   ### I have a question which is not answered here.
   
  - If you are a sponsor, please email: conference-sponsorship@ostem.org
  - Logistics (travel, non-sponsor registration): conference-logistics@ostem.org
  - Programming (speakers, posters, other programs): conference-programming@ostem.org
+ - Membership (conference resources, chapter logistics): membership@ostem.org
  - Accessibility: access@ostem.org
 <style jsx>{`
   .faqs :global(h3) {
