--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -36,7 +36,7 @@ oSTEM will not be hosting a hackathon at this year’s conference. Instead, we w
 
 Registration for the conference is now open! Visit our [Conference Registration Page](https://conference.ostem.org/2022/registration) for pricing and more information.
   
-oSTEM Members receive an automatic discount. Not an [oSTEM member](https://ostem.org/page/how-to-join-ostem)? Click here to [join now](https://ostem.org/page/how-to-join-ostem). All tickets purchased on or after September 1 will cost the following:
+oSTEM Members receive an automatic discount. Not an [oSTEM member](https://ostem.org/page/how-to-join-ostem)? Click here to [join now](https://ostem.org/page/how-to-join-ostem).
 
 ### What does conference registration cover?
 
